[gd_scene load_steps=16 format=3 uid="uid://o3s8eg8f6bo8"]

[ext_resource type="Script" path="res://lyan.gd" id="1_70kkq"]
[ext_resource type="Texture2D" uid="uid://boj3r4wektg1b" path="res://sprites/LyanIdle.png" id="1_cqyxx"]
[ext_resource type="Texture2D" uid="uid://dhsb5k5fpn2b6" path="res://sprites/LyanRunHands.png" id="2_1ewjj"]
[ext_resource type="Texture2D" uid="uid://dq1p5vvcrh8my" path="res://sprites/LyanIdleHands.png" id="3_0yw33"]
[ext_resource type="Texture2D" uid="uid://djr6on8ob6fjg" path="res://sprites/LyanRun.png" id="3_s4u2l"]
[ext_resource type="Texture2D" uid="uid://b7do7h0a5ffjt" path="res://sprites/LyanGunHands.png" id="4_racpx"]
[ext_resource type="Script" path="res://gun_hands.gd" id="5_r2w1f"]

[sub_resource type="Animation" id="Animation_angc5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_8pke6"]
resource_name = "shoot"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.15),
"transitions": PackedFloat32Array(0.05, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-1, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.15),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -0.0523599, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7k28s"]
_data = {
"RESET": SubResource("Animation_angc5"),
"shoot": SubResource("Animation_8pke6")
}

[sub_resource type="Animation" id="Animation_g8t68"]
resource_name = "Idle"
length = 0.55
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_cqyxx")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Body/Hands:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_0yw33")]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Body/Hands:hframes")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Body/Hands:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 4]
}

[sub_resource type="Animation" id="Animation_0loqt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_cqyxx")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Body/Hands:hframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Body/Hands:texture")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_1ewjj")]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Body/Hands:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_iihcn"]
resource_name = "Run"
length = 0.75
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_s4u2l")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Body/Hands:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Body/Hands:hframes")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Body/Hands:texture")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_1ewjj")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c7k2q"]
_data = {
"Idle": SubResource("Animation_g8t68"),
"RESET": SubResource("Animation_0loqt"),
"Run": SubResource("Animation_iihcn")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i461g"]
size = Vector2(6, 7)

[node name="Lyan" type="CharacterBody2D" node_paths=PackedStringArray("anim", "gunAnim", "body", "hands", "gunHands", "dashCol", "dashLenghtTimer")]
z_index = 1
script = ExtResource("1_70kkq")
anim = NodePath("PlayerAnim")
gunAnim = NodePath("GunHandsPos/GunHands/GunAnim")
body = NodePath("Body")
hands = NodePath("Body/Hands")
gunHands = NodePath("GunHandsPos/GunHands")
dashCol = NodePath("dashCol")
dashLenghtTimer = NodePath("dashLenght")

[node name="Body" type="Sprite2D" parent="."]
z_index = -1
texture = ExtResource("1_cqyxx")
hframes = 5

[node name="Hands" type="Sprite2D" parent="Body"]
texture = ExtResource("2_1ewjj")
hframes = 8

[node name="GunHandsPos" type="Marker2D" parent="."]
position = Vector2(0, 4)

[node name="GunHands" type="Sprite2D" parent="GunHandsPos" node_paths=PackedStringArray("player", "playerPos", "anim")]
z_index = 1
texture = ExtResource("4_racpx")
script = ExtResource("5_r2w1f")
player = NodePath("../..")
playerPos = NodePath("..")
anim = NodePath("GunAnim")

[node name="GunAnim" type="AnimationPlayer" parent="GunHandsPos/GunHands"]
libraries = {
"": SubResource("AnimationLibrary_7k28s")
}

[node name="PlayerAnim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_c7k2q")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 5.5)
shape = SubResource("RectangleShape2D_i461g")

[node name="Player" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
visible = false
position = Vector2(0, 5.5)
shape = SubResource("RectangleShape2D_i461g")

[node name="dashCol" type="Timer" parent="."]
one_shot = true

[node name="dashLenght" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="timeout" from="dashCol" to="." method="_on_dash_col_timeout"]
